# algorithms-project

./: BruteForce.cpp  BruteForce.h  CMakeLists.txt  Divide_and_Conquer.cpp  Divide_and_Conquer.h  Letter.cpp  Letter.h  README.md  SDL_Plotter.h  Shapes.cpp  Shapes.h  UserInterface.cpp  UserInterface.h  Words.cpp  Words.h  bruteForceConvexHull.h  dcConvexHull.h  driver.cpp  line.cpp  line.h  point.cpp  point.h  quickHull_convexHull.h  testDriver.cpp
CSI3344_proj1/: curve.cpp  curve.h  point.cpp
algorithms-project/: CMakeLists.txt  README.md  driver.cpp  log.txt  point.h
div_conquer_algorithms/: quickHull_convexHull.h  tangent_convexHull2.h
groupProject/: CMakeLists.txt  SDL_Plotter.cpp  bruteForceConvexHull.h  color_rgb.h  dcConvexHull.h  driver.cpp  line.cpp  log.txt  point.h
